# cuda-matrix-multiply

./: .editorconfig  .gitignore  BENCHMARKS.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md
.github/: PULL_REQUEST_TEMPLATE.md
src/: matmul.cu
